--- a/deli-user-creation-app/src/components/registration/Registration.module.css
+++ b/deli-user-creation-app/src/components/registration/Registration.module.css
@@ -1,8 +1,11 @@
 .imageContainer {
     display: flex;
-    justify-content: center;
-    border: 1px solid black;
     padding: 10px;
+    width: 28vw;
+}
+
+.secondImage {
+    display: none;
 }
 
 @media (max-width: 768px) {
@@ -17,15 +20,42 @@
     }
 }
 
+@media (max-width: 820px) and (max-height: 1180px) {
+    .mainImage {
+        display: none;
+    }
+    .imageContainer {
+        display: none;
+    }
+}
+
+@media (min-width: 1024px) and (min-height: 1366px) {
+    .mainImage {
+        display: none;
+    }
+    .imageContainer {
+        display: none;
+    }
+}
+
+@media (min-width: 912px) and (min-height: 1368px) {
+    .imageContainer {
+        display: none;
+    }
+    .mainImage {
+        display: none;
+    }
+}
+
 .container {
     display: flex;
-    height: 90vh;
-    width: 100%;
+    height: 85vh;
+    justify-content: center;
+    align-content: center;
 }
 
 .registerContainer {
     text-align: center;
-    border: 3px solid black;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -44,7 +74,12 @@
     outline: none;
     font-weight: bold;
     padding-left: 10px;
+    font-size: 12px;
 }
+
+.input:focus {
+    border-color: #e65624;
+}   
 
 .inputContainer {
     display: flex;
@@ -56,22 +91,22 @@
 .h1 {
     font-size: 30px;
     color: #e65624;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
 }
 
 .h3 {
-    color: gray;
+    color: black;
     font-size: 13px;
-    font-weight: bold;
+    font-weight: 400;
     margin-bottom: 30px;
+    margin-top: -10px;
 }
 
 .formContainer {
     display: flex;
     justify-content: center;
-    border: 1px solid black;
 }
 
 .form {
@@ -85,7 +120,11 @@
     margin-top: 10px;
     padding: 10px;
     background-color: #e65624;
+    font-size: 12px;
     color: #fff;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 3px;
+    border: none;
+    width: 400%;
+    max-width: 300px;
 }
