--- a/deli-user-creation-app/src/components/registration/Registration.module.css
+++ b/deli-user-creation-app/src/components/registration/Registration.module.css
@@ -8,6 +8,14 @@
     display: none;
 }
 
+.error {
+    color: red;
+    font-size: 10px;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    width: 400%;
+}
+
 @media (max-width: 768px) {
     .imageContainer {
         display: none;
